src/OpenCvSharpExtern/video_tracking.h

CVAPI(ExceptionStatus) video_Ptr_SparseOpticalFlow_get(cv::Ptr<cv::SparseOpticalFlow> *ptr, cv::SparseOpticalFlow **returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) video_Ptr_SparseOpticalFlow_delete(cv::Ptr<cv::SparseOpticalFlow> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_create(
    int numLevels, double pyrScale, int fastPyramids, int winSize, int numIters,
    int polyN, double polySigma, int flags,
    cv::Ptr<cv::FarnebackOpticalFlow>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::FarnebackOpticalFlow::create(
            numLevels, pyrScale, fastPyramids != 0, winSize, numIters, polyN, polySigma, flags);
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) video_Ptr_FarnebackOpticalFlow_get(cv::Ptr<cv::FarnebackOpticalFlow>* ptr, cv::FarnebackOpticalFlow** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_FarnebackOpticalFlow_delete(cv::Ptr<cv::FarnebackOpticalFlow>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getNumLevels(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getNumLevels(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setNumLevels(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setNumLevels(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getPyrScale(cv::FarnebackOpticalFlow* obj, double* returnValue) { return cvTry([&] { *returnValue = obj->getPyrScale(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setPyrScale(cv::FarnebackOpticalFlow* obj, double value) { return cvTry([&] { obj->setPyrScale(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getFastPyramids(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getFastPyramids() ? 1 : 0; }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setFastPyramids(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setFastPyramids(value != 0); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getWinSize(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getWinSize(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setWinSize(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setWinSize(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getNumIters(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getNumIters(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setNumIters(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setNumIters(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getPolyN(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getPolyN(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setPolyN(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setPolyN(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getPolySigma(cv::FarnebackOpticalFlow* obj, double* returnValue) { return cvTry([&] { *returnValue = obj->getPolySigma(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setPolySigma(cv::FarnebackOpticalFlow* obj, double value) { return cvTry([&] { obj->setPolySigma(value); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_getFlags(cv::FarnebackOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getFlags(); }); }
CVAPI(ExceptionStatus) video_FarnebackOpticalFlow_setFlags(cv::FarnebackOpticalFlow* obj, int value) { return cvTry([&] { obj->setFlags(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_create(cv::Ptr<cv::VariationalRefinement>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::VariationalRefinement::create();
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) video_Ptr_VariationalRefinement_get(cv::Ptr<cv::VariationalRefinement>* ptr, cv::VariationalRefinement** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_VariationalRefinement_delete(cv::Ptr<cv::VariationalRefinement>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_calcUV(
    cv::VariationalRefinement* obj,
    const interop::InputArrayProxy* i0,
    const interop::InputArrayProxy* i1,
    const interop::InputOutputArrayProxy* flowU,
    const interop::InputOutputArrayProxy* flowV)
{
    return cvTry([&] {
        obj->calcUV(InProxy(*i0), InProxy(*i1), IoProxy(*flowU), IoProxy(*flowV));
    });
}
CVAPI(ExceptionStatus) video_VariationalRefinement_getFixedPointIterations(cv::VariationalRefinement* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getFixedPointIterations(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setFixedPointIterations(cv::VariationalRefinement* obj, int value) { return cvTry([&] { obj->setFixedPointIterations(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getSorIterations(cv::VariationalRefinement* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getSorIterations(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setSorIterations(cv::VariationalRefinement* obj, int value) { return cvTry([&] { obj->setSorIterations(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getOmega(cv::VariationalRefinement* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getOmega(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setOmega(cv::VariationalRefinement* obj, float value) { return cvTry([&] { obj->setOmega(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getAlpha(cv::VariationalRefinement* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getAlpha(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setAlpha(cv::VariationalRefinement* obj, float value) { return cvTry([&] { obj->setAlpha(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getDelta(cv::VariationalRefinement* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getDelta(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setDelta(cv::VariationalRefinement* obj, float value) { return cvTry([&] { obj->setDelta(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getGamma(cv::VariationalRefinement* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getGamma(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setGamma(cv::VariationalRefinement* obj, float value) { return cvTry([&] { obj->setGamma(value); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_getEpsilon(cv::VariationalRefinement* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getEpsilon(); }); }
CVAPI(ExceptionStatus) video_VariationalRefinement_setEpsilon(cv::VariationalRefinement* obj, float value) { return cvTry([&] { obj->setEpsilon(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_create(int preset, cv::Ptr<cv::DISOpticalFlow>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::DISOpticalFlow::create(preset);
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) video_Ptr_DISOpticalFlow_get(cv::Ptr<cv::DISOpticalFlow>* ptr, cv::DISOpticalFlow** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_DISOpticalFlow_delete(cv::Ptr<cv::DISOpticalFlow>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getFinestScale(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getFinestScale(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setFinestScale(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setFinestScale(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getCoarsestScale(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getCoarsestScale(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setCoarsestScale(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setCoarsestScale(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getPatchSize(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getPatchSize(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setPatchSize(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setPatchSize(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getPatchStride(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getPatchStride(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setPatchStride(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setPatchStride(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getGradientDescentIterations(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getGradientDescentIterations(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setGradientDescentIterations(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setGradientDescentIterations(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getVariationalRefinementIterations(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getVariationalRefinementIterations(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setVariationalRefinementIterations(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setVariationalRefinementIterations(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getVariationalRefinementAlpha(cv::DISOpticalFlow* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getVariationalRefinementAlpha(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setVariationalRefinementAlpha(cv::DISOpticalFlow* obj, float value) { return cvTry([&] { obj->setVariationalRefinementAlpha(value); }); }